# VoxelEngineCpp

./: CMakeLists.txt
data/: blocks.json  textures.json
include/: Profiler.h
include/engine/: Camera.h  Engine.h  Game.h  Shader.h  VoxelGame.h
include/engine/core/: AABB.h  BlockPos.h  ChunkCoord.h  Direction.h  FeatureRegionCoord.h  Logger.h  Vec3i.h
include/engine/main/: GameConfig.h
include/engine/mesh/: ChunkMesher.h  Mesh.h  MeshData.h  MeshManager.h  ThreadedChunkMesher.h  ThreadedMeshCreator.h
include/engine/platform/: DisplayData.h  KeyboardHandler.h  MouseHandler.h  Window.h
include/engine/renderer/block/: BakedQuad.h  FaceBakery.h
include/engine/renderer/chunk/: ChunkMesher.h  ChunkRenderer.h
include/engine/scene/: Scene.h
include/engine/texture/: Texture.h  TextureAtlas.h  TextureAtlasHelpers.h  TextureManager.h
include/engine/world/: Chunk.h  Level.h  World.h
include/engine/world/block/: BlockHelpers.h  BlockType.h
include/engine/world/level/: LevelReader.h  LevelSimulatedReader.h  LevelWriter.h
shaders/: frag.glsl  vert.glsl
src/engine/: Camera.cpp  Engine.cpp  Shader.cpp  VoxelGame.cpp  main.cpp
src/engine/core/: Logger.cpp  Vec3i.cpp
src/engine/main/: GameConfig.cpp  main.cpp
src/engine/mesh/: Mesh.cpp  MeshManager.cpp  ThreadedChunkMesher.cpp  ThreadedMeshCreator.cpp
src/engine/platform/: DisplayData.cpp  KeyboardHandler.cpp  MouseHandler.cpp  Window.cpp
src/engine/renderer/block/: FaceBakery.cpp
src/engine/scene/: Scene.cpp
src/engine/texture/: Texture.cpp  TextureAtlas.cpp  TextureManager.cpp
(+13 files in other folders)
